# microblog

./: .flaskenv  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  app.db  config.py  messages.pot  microblog.py  pyproject.toml  tests.py
.github/workflows/: ci.yml  deploy.yml  security.yml
app/: __init__.py  cli.py  email.py  forms.py  models.py  routes.py  translate.py
app/auth/: forms.py  routes.py
app/errors/: handlers.py
app/main/: forms.py  routes.py
app/templates/: 500.html  _post.html  base.html  bootstrap_wtf.html  edit_profile.html  index.html  login.html  register.html  reset_password.html  reset_password_request.html  user.html
app/translations/fr/LC_MESSAGES/: messages.mo  messages.po
app/translations/zh/LC_MESSAGES/: messages.mo  messages.po
migrations/: env.py
migrations/versions/: 1d90560f6bf5_posts_table.py  29246746c2a5_users_table.py  4c0fcf14b841_followers.py  7a9d9d89ea35_new_fields_in_user_model.py  bb2d960047a6_add_lang_to_posts.py
tests/: conftest.py  test_models.py  test_routes.py
