[project]
name = "microblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-shell-ipython>=0.5.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "ipython>=9.6.0",
    "python-dotenv>=1.1.1",
]
